# Sentiment-Analysis

./: .gitignore  README.md  makefile  mypy.ini  pyproject.toml
Notebook/: EDA.ipynb  model.ipynb  preprocessing.ipynb  test.ipynb
sentiment_analysis/: exception.py  logging_config.py
sentiment_analysis/components/data_preparation/: data_scrapping.py  kinesis_firehose.py  reddit_producer.py
sentiment_analysis/data_ingestion/processing/lambda_function/: lambda_function.py
sentiment_analysis/data_ingestion/scrapping/: data_scrapping.py
sentiment_analysis/data_ingestion/utils/: data_processing.py
sentiment_analysis/data_pipeline/processing/lambda_function/: lambda_function.py
sentiment_analysis/data_pipeline/scrapping/: data_scrapping.py
sentiment_analysis/data_processing/processing/kinesis_firehose/: kinesis_firehose.py
sentiment_analysis/data_processing/processing/lambda_function/: lambda_function.py
sentiment_analysis/data_processing/scrapping/: data_scrapping.py
sentiment_analysis/data_processing/storage/: db_schema.sql
sentiment_analysis/data_processing/utils/: json_parser.py
sentiment_analysis/machine_learning/components/: data_ingestion.py  data_transformation.py  transformers.py
sentiment_analysis/machine_learning/utils/: saver.py
sentiment_analysis/utils/: test.py  utils.py
tests/integration_tests/data_processing/: test_data_scrapping.py
